Fix: Improve visibility of ticked checkbox on mobile by changing bg-color

--- a/assets/css/_main-section.scss
+++ b/assets/css/_main-section.scss
@@ -168,9 +168,9 @@
     top: 0;
     width: 1.25em;
     height: 1.25em;
-    border: 2px solid rgba($colour-2, 0.3);
+    border: 0.2rem solid rgba($colour-2, 0.3);
     background: #fff;
-    border-radius: 4px;
+    border-radius: 0.4rem;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 /* checked mark aspect */
@@ -178,13 +178,18 @@
 [type="checkbox"]:checked + label:after {
     content: "\2713\0020";
     position: absolute;
-    top: 0.15em;
-    left: 0.1em;
-    font-size: 1.3em;
-    line-height: 0.8;
-    color: $colour-1;
+    top: 0;
+    left: 0;
+    width: 2rem;
+    height: 2rem;
+    font-size: 2rem;
+    line-height: 1;
+    color: $white;
+    background-color: $colour-1;
+    border-radius: 0.4rem;
     transition: all 0.2s;
     font-family: "Lucida Sans Unicode", "Arial Unicode MS", Arial;
+    padding-left: 0.2rem;
 }
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
