--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,9 +276,9 @@ desktop-large: 1440px
   top: 0;
   width: 1.25em;
   height: 1.25em;
-  border: 2px solid rgba(74, 74, 74, 0.3);
+  border: 0.2rem solid rgba(74, 74, 74, 0.3);
   background: #fff;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
           box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
@@ -288,14 +288,19 @@ desktop-large: 1440px
 [type="checkbox"]:checked + label:after {
   content: "\2713\0020";
   position: absolute;
-  top: 0.15em;
-  left: 0.1em;
-  font-size: 1.3em;
-  line-height: 0.8;
-  color: #015a06;
+  top: 0;
+  left: 0;
+  width: 2rem;
+  height: 2rem;
+  font-size: 2rem;
+  line-height: 1;
+  color: white;
+  background-color: #015a06;
+  border-radius: 0.4rem;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   font-family: "Lucida Sans Unicode", "Arial Unicode MS", Arial;
+  padding-left: 0.2rem;
 }
 
 /* checked mark aspect changes */
